--- a/mysql-test/suite/rocksdb_rpl/t/rpl_gtid_crash_safe_wal_corrupt_dual_engine.cnf
+++ b/mysql-test/suite/rocksdb_rpl/t/rpl_gtid_crash_safe_wal_corrupt_dual_engine.cnf
@@ -8,7 +8,6 @@ rocksdb_enable_2pc=OFF
 rocksdb_wal_recovery_mode=2
 
 [mysqld.2]
-sync_relay_log_info=100
 relay_log_recovery=1
 relay_log_info_repository=FILE
 log_slave_updates
@@ -17,3 +16,8 @@ enforce_gtid_consistency=ON
 rocksdb_enable_2pc=OFF
 rocksdb_wal_recovery_mode=2
 slave_use_idempotent_for_recovery=Yes
+master_info_repository=FILE
+skip_flush_master_info=ON
+skip_flush_relay_worker_info=ON
+sync_master_info=10000
+sync_relay_log_info=10000
